media/tautulli/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
spec:
  serviceName: tautulli
  selector:
    matchLabels:
      app: tautulli
  replicas: 1
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:2.14.5
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tautulli-data
