media/tautulli/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
  selector:
    app: tautulli
