media/tautulli/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
spec:
  rules:
    - host: tautulli.neils.house
      http:
        paths:
          - backend:
              service:
                name: tautulli
                port:
                  number: 8181
            path: /
            pathType: Prefix
